Make sure icon cache has /-separated subdirs only (v2 - use g_build_path)

https://bugzilla.gnome.org/show_bug.cgi?id=692955
(cherry picked from commit 8e80fd1ab9eb3c6389b0582eab21b637141e7f92)

Conflicts:
	gtk/updateiconcache.c